2023-03-06 Jan Kotanski <jankotan@gmail.com>
	* add --environments  --links and  --first options to nxscreate secopcp (#472)
	* split a scan command text in the dataset attachment if it is too long (#471)
	* tagged as v3.43.0

2023-02-27 Jan Kotanski <jankotan@gmail.com>
	* move left, right, top, bottom of NXslit to the NXtransformations (#469)
	* tagged as v3.42.3

2023-02-27 Jan Kotanski <jankotan@gmail.com>
	* change fio date to iso format (#466)
	* tagged as v3.42.2

2023-02-24 Jan Kotanski <jankotan@gmail.com>
	* fix setting a frame number of attachment images (#463)
	* tagged as v3.42.1

2023-02-22 Jan Kotanski <jankotan@gmail.com>
	* add scan_command to the title in nxsfileinfo attribute (#457), (#458)
	* fix setting the creationTime from endTime (#460)
	* tagged as v3.42.0

2023-02-16 Jan Kotanski <jankotan@gmail.com>
	* set the signal from the FIO signalcounter parameter in nxsfileinfo attachment (#447)
	* fix setting the creationTime in FIO nxsfileinfo attachment (#447)
	* set the signal from the SignalCounter sardana variable in nxsfileinfo attachment (#449)
	* set the axes from the sardana scancommand first parameter in nxsfileinfo attachment (#449)
	* add --scan-command-axes to nxsfileinfo attachment (#451)
	* tagged as v3.41.0

2023-02-07 Jan Kotanski <jankotan@gmail.com>
	* take next axis if the first does not exist in nxsfileinfo attribute (#443)
	* tagged as v3.40.4

2023-02-06 Jan Kotanski <jankotan@gmail.com>
	* change --overwrite to --override in nxsfileinfo attachment (#440)
	* tagged as v3.40.3

2023-02-06 Jan Kotanski <jankotan@gmail.com>
	* do not create json for attachments without thumbnail (#437)
	* use first existing axis (#437)
	* tagged as v3.40.2

2023-01-31 Jan Kotanski <jankotan@gmail.com>
	* fix nxsfileinfo attachment help (#432)
	* tagged as v3.40.1

2023-01-31 Jan Kotanski <jankotan@gmail.com>
	* add nxsfileinfo sample and instrument metadata creators (#425)
	* add nxsfileinfo attachment metadata creators (#427)