@@ -1283,7 +1283,14 @@ class SECoPCP(Runner):
         parser.add_argument("-f", "--first",
                             help="first linked targets separated by comman",
                             dest="first", default="")
-
+        parser.add_argument(
+            "-z", "--transformation-attributes", dest="transattrs",
+            default='{"rotation_z":'
+            '{"transformation_type":"rotation","vector":[0,-1,0]}}',
+            help=("a JSON dictionary with transformation parameters i.e, "
+                  '"transformation_type", "vector", "depends_on".'
+                  ' Default: {"rotation_z":'
+                  '"{"transformation_type":"rotation","vector":[0,-1,0]}}'))
         parser.add_argument("-p", "--xml-package", dest="xmlpackage",
                             help="xml template package")
         parser.add_argument("-y", "--entryname", dest="entryname",
