@@ -296,6 +296,10 @@
         }
       },
       "description": "simulated motor",
+      "meaning": [
+        "rotation_z",
+        40
+      ],
       "implementation": "secop.simulation.SimBase_drv",
       "interface_classes": [
         "Drivable"
